--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+
+:root {
+    --back-ground-color:"#141E27",
+}
 html,
 body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: #041C32;
 }
+
 
 a {
     color: inherit;
